# determining-the-degree-of-involvement

./: .env.example  .gitignore  README.md  analyze_ear.py  analyze_head_pose.py  docker-compose.yaml  emotion_detection_app.py  face_detection_and_emotion_recognition.py  requirements.txt  test_all_modules_directly.py
.github/workflows/: ci-cd.yml
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: room.py  stream.py
backend/app/core/: config.py
backend/app/db/: rooms_and_clients.py
backend/app/schemas/: __init__.py  room.py  stream.py
backend/app/services/: room.py
backend/app/services/video_processing/: __init__.py  analyze_ear.py  analyze_emotion.py  analyze_head_pose.py  engagement_calculator.py  face_analysis_pipeline.py  face_detection.py  service.py  video_stream.py
backend/tests/: conftest.py  test_api.py  test_room_service.py
docs/: README.md  deployment.md  development.md  env-variables.md
docs/engagement-calculation/: README.md  component-scores.md  formula.md  levels-and-ranges.md  modifiers.md  smoothing-and-trend.md
docs/frontend/: README.md  engagement-app.md  environment.md  limitations.md  param-testing-tool.md  video-engagement-app.md
docs/pipeline/: eye-aspect-ratio.md
frontend/: .dockerignore  .env.example  Dockerfile  README.md  api_client.py  engagement-app.md  engagement_app.py  environment.md  limitations.md  new_app  param-testing-tool.md  pyproject.toml  requirements.txt  video-engagement-app.md  video_engagement_app.py
frontend/src/: main.py  styles.css
frontend/tools/: param_testing_app.py  requirements.txt
schemas/: Pydantic_scheme.py
tests/html/: test_hypervisor.html
